[tool.poetry]
name = "deep-lynx-py-sdk"
version = "0.1.7"
description = ""
authors = ["Jeren Browning <jeren.browning@inl.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
certifi = "14.05.14"
six = "1.10"
python_dateutil = "2.5.3"
setuptools = "21.0.0"
urllib3 = "1.15.1"

[tool.poetry.dev-dependencies]
coverage = "^4.0.3"
nose = "1.3.7"
pluggy = "0.3.1"
py = "1.4.31"
randomize = "0.13"
python-dotenv = "0.19.1"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

