[metadata]
name = deep-lynx
version = 0.0.1
author = Jeren Browning
author_email = jeren.browning@inl.gov
description = A package for interacting with the Deep Lynx data warehouse
long_description = file: README.md
long_description_content_type = text/markdown
license = LICENSE.txt
url = https://github.com/idaholab/Deep-Lynx-Python-Package
project_urls =
    Bug Tracker = https://github.com/idaholab/Deep-Lynx-Python-Package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src